<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoaddFragment"
    android:background="@color/orenzi2"> <!--背景色を指定-->



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/memoaddtextview"
            android:layout_width="270dp"
            android:layout_height="49dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/white"
            android:text="@string/bt_add"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/memobackbtn2"
            app:layout_constraintTop_toTopOf="@+id/memobackbtn2" />

        <Button
            android:id="@+id/memobackbtn2"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="?attr/actionModeCloseDrawable"
            android:hint="@string/kusuribtn_back"
            app:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/memoedittext"
            android:layout_width="364dp"
            android:layout_height="507dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/memotext_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memoaddtextview" />

        <Button
            android:id="@+id/memoaddbutton"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_shape2"
            android:text="@string/kusuribtn_register"
            android:textAllCaps="true"
            android:textSize="26sp"
            android:textStyle="bold"
            app:backgroundTint="@color/orenzi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memoedittext" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>