<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.websarva.wings.android.yao.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_kusurimemoFragment"
            app:destination="@id/kusurimemoFragment" />
        <action
            android:id="@+id/action_navigation_home_to_memoaddFragment"
            app:destination="@id/memoaddFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.websarva.wings.android.yao.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_kusuriaddFragment"
            app:destination="@id/kusuriaddFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_itemListDialogFragment"
            app:destination="@id/itemListDialogFragment" />
    </fragment>
    <dialog
        android:id="@+id/itemListDialogFragment"
        android:name="com.websarva.wings.android.yao.ItemListDialogFragment"

        tools:layout="@layout/fragment_item_list_dialog_list_dialog" >
        <action
            android:id="@+id/action_itemListDialogFragment_to_kusuriaddFragment"
            app:destination="@id/kusuriaddFragment" />
        <action
            android:id="@+id/action_itemListDialogFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </dialog>
    <fragment
        android:id="@+id/kusuriaddFragment"
        android:name="com.websarva.wings.android.yao.KusuriaddFragment"

        tools:layout="@layout/fragment_kusuriadd" >
        <action
            android:id="@+id/action_kusuriaddFragment_to_itemListDialogFragment"
            app:destination="@id/itemListDialogFragment" />
        <action
            android:id="@+id/action_kusuriaddFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
    <fragment
        android:id="@+id/kusurimemoFragment"
        android:name="com.websarva.wings.android.yao.kusurimemoFragment"

        tools:layout="@layout/fragment_kusurimemo" >
        <action
            android:id="@+id/action_kusurimemoFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.websarva.wings.android.yao.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.websarva.wings.android.yao.MainActivity"
         />
    <fragment
        android:id="@+id/memoaddFragment"
        android:name="com.websarva.wings.android.yao.MemoaddFragment"

        tools:layout="@layout/fragment_memoadd" >
        <action
            android:id="@+id/action_memoaddFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_memoaddFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
</navigation>